--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_slidable: ^2.0.0
   provider: ^6.0.5
   uuid: ^3.0.7
 
